--- a/index.html
+++ b/index.html
@@ -2,13 +2,50 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+	<meta charset="utf-8">
 
-  <title>Setarit</title>
-  <meta name="description" content="Setarit landing page">
-  <meta name="author" content="Setarit">
+  	<title>Setarit</title>
+  	<meta name="description" content="Setarit landing page">
+  	<meta name="author" content="Setarit">
+
+  	<link rel="stylesheet" href="css/foundation.css">
+  	<link rel="stylesheet" type="text/css" href="css/custom.css">
+  	<script src="/js/vendor/modernizr.js"></script>
 </head>
 <body>
-<nav>Setarit</nav>
+	<!-- nav bar -->
+	<div class="fixed">
+		<nav class="top-bar" data-topbar role="navigation">
+			<ul class="title-area">
+				<li class="name">
+					<h1><img src="img/icon.png"/></h1>
+				</li>
+			</ul>
+
+			<section class="top-bar-section"><!-- actual navigation -->
+				<ul class="left">
+					<li class="active"><a href="#">BackUp</a></li>
+				</ul>
+
+				<!-- Right Nav Section -->
+			    <ul class="right">
+			      <li class="has-dropdown">
+			        <a href="#">EN</a>
+			        <ul class="dropdown">
+			          <li><a>NL</a></li>
+			          <li><a>FR</a></li>
+			        </ul>
+			      </li>
+			    </ul>
+			</section>
+		</nav>
+	</div>
+	<!-- END nav bar -->
+	
+
+	<!-- Scripts -->
+	<script src="/js/vendor/jquery.js"></script>
+	<script src="/js/vendor/fastclick.js"></script>
+	<script src="/js/foundation.min.js"></script>
 </body>
 </html>
