Add images + change logo

--- a/index.html
+++ b/index.html
@@ -18,24 +18,25 @@
 		<nav class="top-bar" data-topbar role="navigation">
 			<ul class="title-area">
 				<li class="name">
-					<h1><img src="img/icon.png"/></h1>
+					<h1><img src="img/logo.png"/></h1>
 				</li>
 			</ul>
 
 			<section class="top-bar-section"><!-- actual navigation -->
 				<ul class="left">
-					<li class="active"><a href="#">BackUp</a></li>
+					<li class="active"><a href="#">BackUp</a></li>					
 				</ul>
 
 				<!-- Right Nav Section -->
 			    <ul class="right">
-			      <li class="has-dropdown">
-			        <a href="#">EN</a>
-			        <ul class="dropdown">
-			          <li><a>NL</a></li>
-			          <li><a>FR</a></li>
-			        </ul>
-			      </li>
+			    	<li><a href="KB/knowledgeBase.html">Knowledge Base</a></li>
+			      	<li class="has-dropdown">
+			        	<a href="#">EN</a>
+			        	<ul class="dropdown">
+			          		<li><a>NL</a></li>
+			          		<li><a>FR</a></li>
+			        	</ul>
+			      	</li>
 			    </ul>
 			</section>
 		</nav>
