--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 			<section class="top-bar-section"><!-- actual navigation -->
 				<ul class="left">
-					<li class="active"><a href="#">BackUp</a></li>					
+					<li class="active"><a href="#backup">BackUp</a></li>					
 				</ul>
 
 				<!-- Right Nav Section -->
@@ -42,8 +42,26 @@
 		</nav>
 	</div>
 	<!-- END nav bar -->
-	
 
+	<!-- content -->
+	<div class="content">
+		<!-- backup section -->
+		<section id="backup">
+			<div class="hero">				
+				<div class="row">
+					<div class="large-6 columns">
+						<img src="img/backupAppPhoneCombine.png" alt="screenshot of the backup application" />
+					</div>
+  					<div class="large-6 columns">
+  						<h1>Available for Android on 6th September!</h1>
+  					</div>
+				</div>
+			</div>
+		</section>
+		<!-- END backup section -->
+	</div>	
+	<!-- END content -->
+	
 	<!-- Scripts -->
 	<script src="/js/vendor/jquery.js"></script>
 	<script src="/js/vendor/fastclick.js"></script>
