--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   	<link rel="stylesheet" href="css/foundation.css">
   	<link rel="stylesheet" type="text/css" href="css/custom.css">
-  	<script src="/js/vendor/modernizr.js"></script>
+  	<link rel="stylesheet" href="css/jquery-ui.min.css">
+  	<script src="js/vendor/modernizr.js"></script>
 </head>
 <body>
 	<!-- nav bar -->
@@ -54,6 +55,9 @@
 					</div>
   					<div class="large-6 columns">
   						<h1>Available for Android on 6th September!</h1>
+  						<ul>
+  							<li>Test</li>
+  						</ul>
   					</div>
 				</div>
 			</div>
@@ -63,8 +67,9 @@
 	<!-- END content -->
 	
 	<!-- Scripts -->
-	<script src="/js/vendor/jquery.js"></script>
-	<script src="/js/vendor/fastclick.js"></script>
-	<script src="/js/foundation.min.js"></script>
+	<script src="js/vendor/jquery.js"></script>
+	<script src="js/vendor/jquery-ui.min.js"></script>
+	<script src="js/vendor/fastclick.js"></script>
+	<script src="js/foundation.min.js"></script>
 </body>
 </html>
