Add features + animation

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
   					<div class="large-6 columns">
   						<h1>Available for Android on 6th September!</h1>
   						<ul>
-  							<li>Test</li>
+  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Periodically creates a backup from your device</li>
+  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Multiple cloud providers available</li>
+  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Easy configuration</li>
+  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Support *</li>
   						</ul>
   					</div>
 				</div>
@@ -71,5 +74,7 @@
 	<script src="js/vendor/jquery-ui.min.js"></script>
 	<script src="js/vendor/fastclick.js"></script>
 	<script src="js/foundation.min.js"></script>
+
+	<script type="text/javascript" src="js/heroAnimation.js"></script>
 </body>
 </html>
