--- a/index.html
+++ b/index.html
@@ -54,18 +54,29 @@
 						<img src="img/backupAppPhoneCombine.png" alt="screenshot of the backup application" />
 					</div>
   					<div class="large-6 columns">
-  						<h1>Available for Android on 6th September!</h1>
+  						<h1>Now available for Android!</h1>
   						<ul>
   							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Periodically creates a backup from your device</li>
   							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Multiple cloud providers available</li>
   							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Easy configuration</li>
-  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Support *</li>
+  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Support</li>
+  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Frequent updates</li>
   						</ul>
+  						<a href="https://play.google.com/store/apps/details?id=com.setarit.backup">
+  							<img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+						</a>
   					</div>
 				</div>
 			</div>
 		</section>
 		<!-- END backup section -->
+		<!-- KB section -->
+		<section id="knowledgebase">
+			<a href="#">
+				<img src="img/kb.png" alt="Visit our Knowledge Base"/>
+			</a>	
+		</section>		
+		<!-- END KB section -->
 	</div>	
 	<!-- END content -->
 	
