--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 			<section class="top-bar-section"><!-- actual navigation -->
 				<ul class="left">
 					<li class="active"><a href="#backup">BackUp</a></li>					
+					<li><a href="#knowledgebase">Knowledge Base</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 
 				<!-- Right Nav Section -->
 			    <ul class="right">
-			    	<li><a href="KB/knowledgeBase.html">Knowledge Base</a></li>
+			    	<li><a href="KB/knowledgebase.html">Knowledge Base</a></li>
 			      	<li class="has-dropdown">
 			        	<a href="#">EN</a>
 			        	<ul class="dropdown">
@@ -70,13 +72,37 @@
 			</div>
 		</section>
 		<!-- END backup section -->
-		<!-- KB section -->
-		<section id="knowledgebase">
-			<a href="#">
-				<img src="img/kb.png" alt="Visit our Knowledge Base"/>
-			</a>	
-		</section>		
-		<!-- END KB section -->
+		<div class="row">
+			<!-- KB section -->
+			<section id="knowledgebase">
+				<a href="KB/knowledgebase.html">
+					<img src="img/kb.png" alt="Visit our Knowledge Base"/>
+				</a>	
+			</section>		
+			<!-- END KB section -->
+			<!-- contact section -->
+			<section id="contact">
+				<div class="medium-6 large-8 columns">
+					<h4>Contact</h4>
+					<p>You can contact us in various ways:</p>
+					<div class="row">
+						<div class="small-6 columns">
+							<a href="https://twitter.com/intent/tweet?screen_name=Setarit" class="twitter-mention-button" data-size="large" data-dnt="true">Tweet to @Setarit</a>
+							<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+						</div>
+						<div id="GitHub" class="small-6 columns">
+							<a href="https://github.com/Setarit">
+								<img src="img/GitHub-Mark.png"/>
+								On GitHub
+							</a>							
+						</div>
+					</div>
+
+					
+				</div>
+			</section>
+			<!-- END contact section -->
+		</div>
 	</div>	
 	<!-- END content -->
 	
