--- a/KB/knowledgebase.html
+++ b/KB/knowledgebase.html
@@ -16,12 +16,26 @@
 <body>
 	<!-- nav bar -->
 	<div class="kbHeader">
+		<img src="../img/kb_small.png"/>
 	</div>
 	<!-- END nav bar -->
 
 	<!-- content -->
-	<div class="content">
-		
+	<div class="row kbList">
+		<div class="large-6 columns panel">
+			<h4>For developers</h4>
+			<ul>
+				<li>
+					<a href="DEV/KB-DEV-001-Opening-NetBeans-project-from-Git.pdf">
+						Opening a NetBeans project from Git in Eclipse
+					</a>
+				</li>
+			</ul>
+		</div>
+  		<div class="large-6 columns panel">
+  			<h4>Other</h4>
+  			<p>Currently no articles, please come back later</p>
+  		</div>
 	</div>	
 	<!-- END content -->
 	
