--- a/KB/knowledgebase.html
+++ b/KB/knowledgebase.html
@@ -12,6 +12,7 @@
   	<link rel="stylesheet" type="text/css" href="../css/custom.css">
   	<link rel="stylesheet" href="../css/jquery-ui.min.css">
   	<script src="../js/vendor/modernizr.js"></script>
+  	<script type="text/javascript" src="../js/ga.js"></script>
 </head>
 <body>
 	<!-- nav bar -->
