--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-
+	<meta name="google-site-verification" content="loyxClq4z2JWxZw6-o-DLB1kGgScnLfwHqRnyQQBRc8" />
   	<title>Setarit</title>
   	<meta name="description" content="Setarit landing page">
   	<meta name="author" content="Setarit">
