Removed right navigation + KB nr

--- a/KB/knowledgebase.html
+++ b/KB/knowledgebase.html
@@ -28,7 +28,7 @@
 			<ul>
 				<li>
 					<a href="DEV/KB-DEV-001-Opening-NetBeans-project-from-Git.pdf">
-						Opening a NetBeans project from Git in Eclipse
+						<strong>KB-DEV-001</strong> Opening a NetBeans project from Git in Eclipse
 					</a>
 				</li>
 			</ul>
