Updated alt tags

--- a/KB/knowledgebase.html
+++ b/KB/knowledgebase.html
@@ -17,7 +17,7 @@
 <body>
 	<!-- nav bar -->
 	<div class="kbHeader">
-		<img src="../img/kb_small.png"/>
+		<img src="../img/kb_small.png" alt="Setarit Knowledge Base" />
 	</div>
 	<!-- END nav bar -->
 
