--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<nav class="top-bar" data-topbar role="navigation">
 			<ul class="title-area">
 				<li class="name">
-					<h1><img src="img/logo.png"/></h1>
+					<h1><img src="img/logo.png" alt="Setarit Logo" /></h1>
 				</li>
 			</ul>
 
