--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   	<link rel="stylesheet" href="css/foundation.css">
   	<link rel="stylesheet" type="text/css" href="css/custom.css">
   	<link rel="stylesheet" href="css/jquery-ui.min.css">
+  	<link rel="shortcut icon" href="img/square_flatLogoTest_noSlogan.png">
   	<script src="js/vendor/modernizr.js"></script>
   	<script type="text/javascript" src="js/ga.js"></script>
 </head>
@@ -20,7 +21,7 @@
 		<nav class="top-bar" data-topbar role="navigation">
 			<ul class="title-area">
 				<li class="name">
-					<h1><img src="img/logo.png" alt="Setarit Logo" /></h1>
+					<h1><img src="img/rectangle_flatLogoTest_noSlogan.png" alt="Setarit Logo" /></h1>
 				</li>
 			</ul>
 
