--- a/KB/knowledgebase.html
+++ b/KB/knowledgebase.html
@@ -11,6 +11,7 @@
   	<link rel="stylesheet" href="../css/foundation.css">
   	<link rel="stylesheet" type="text/css" href="../css/custom.css">
   	<link rel="stylesheet" href="../css/jquery-ui.min.css">
+  	<link rel="shortcut icon" href="../img/square_flatLogoTest_noSlogan.png">
   	<script src="../js/vendor/modernizr.js"></script>
   	<script type="text/javascript" src="../js/ga.js"></script>
 </head>
