Improved mobile layout

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 
 <html lang="en">
 <head>
@@ -41,24 +41,24 @@
 		<!-- backup section -->
 		<section id="backup">
 			<div class="hero">				
-				<div class="row">
-					<div class="large-6 columns">
-						<img src="img/backupAppPhoneCombine.png" alt="screenshot of the backup application" />
-					</div>
-  					<div class="large-6 columns">
-  						<h1>Now available for Android!</h1>
-  						<ul>
-  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Periodically creates a backup from your device</li>
-  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Multiple cloud providers available</li>
-  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Easy configuration</li>
-  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Support</li>
-  							<li><img src="img/Available_icon_white.png" alt="Feature tick"/>Frequent updates</li>
-  						</ul>
-  						<a href="https://play.google.com/store/apps/details?id=com.setarit.backup">
-  							<img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
-						</a>
-  					</div>
-				</div>
+                <div class="row" id="heroContent">
+                    <div class="large-6 columns">
+                        <img src="img/backupAppPhoneCombine.png" alt="screenshot of the backup application" />
+                    </div>
+                    <div class="large-6 columns">
+                        <h1>Now available for Android!</h1>
+                        <ul>
+                            <li><img src="img/Available_icon_white.png" alt="Feature tick" />Periodically creates a backup from your device</li>
+                            <li><img src="img/Available_icon_white.png" alt="Feature tick" />Multiple cloud providers available</li>
+                            <li><img src="img/Available_icon_white.png" alt="Feature tick" />Easy configuration</li>
+                            <li><img src="img/Available_icon_white.png" alt="Feature tick" />Support</li>
+                            <li><img src="img/Available_icon_white.png" alt="Feature tick" />Frequent updates</li>
+                        </ul>
+                        <a href="https://play.google.com/store/apps/details?id=com.setarit.backup">
+                            <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+                        </a>
+                    </div>
+                </div>
 			</div>
 		</section>
 		<!-- END backup section -->
@@ -103,5 +103,8 @@
 	<script src="js/foundation.min.js"></script>
 
 	<script type="text/javascript" src="js/heroAnimation.js"></script>
+    <script type="text/javascript">
+        $(document).foundation();
+    </script>
 </body>
 </html>
