--- a/backup.html
+++ b/backup.html
@@ -32,7 +32,9 @@
             <section class="top-bar-section">
                 <!-- actual navigation -->
                 <ul class="left">
-                    <li class="active"><a href="#backup">BackUp</a></li>
+                    <li class="active"><a href="#">BackUp</a></li>
+                    <li><a href="#changelog">Changelog</a></li>
+                    <li><a href="#upgrading">Upgrading</a></li>
                 </ul>
             </section>
         </nav>
@@ -41,9 +43,76 @@
     <!-- content -->
     <div class="content">
         <div class="row">
-            <section class="changeLog">
-                <h2>Changelog</h2>
+            <section class="leftPadding">
+                <h2 id="features">Features</h2>
+                <ul class="features">
+                    <li><img src="img/Available_icon_green.png" alt="Feature tick" class="grow" />Monyhly, weekly or daily backups</li>
+                    <li><img src="img/Available_icon_green.png" alt="Feature tick" class="grow"/>Support for Google Drive and Dropbox</li>
+                    <li><img src="img/Available_icon_green.png" alt="Feature tick" class="grow"/>Easy configuration</li>
+                    <li><img src="img/Available_icon_green.png" alt="Feature tick" class="grow"/>Support by mail</li>
+                    <li><img src="img/Available_icon_green.png" alt="Feature tick" class="grow"/>Frequent updates</li>
+                    <li><img src="img/Available_icon_green.png" alt="Feature tick" class="grow"/>Selective File Support (SFS)</li>
+                </ul>
+            </section>
 
+
+            <section id="changelog" class="changeLog leftPadding">
+                <h2>Changelog</h2>                
+                <ul class="changeLogHover">
+                    <li class="small-3 columns">
+                        <figure>
+                            <img src="img/changelog/v1.png"/>
+                            <figcaption>
+                                <h2>Version 1</h2>
+                                <p>Initial release</p>
+                            </figcaption>
+                        </figure>
+                    </li> 
+                    <li class="small-3 columns">
+                        <figure>
+                            <img src="img/changelog/v1_1.png"/>
+                            <figcaption>
+                                <h2>Version 1.1</h2>
+                                <p>Support for mobile networks</p>
+                            </figcaption>
+                        </figure>
+                    </li>         
+                    <li class="small-3 columns">
+                        <figure>
+                            <img src="img/changelog/v1_3.png"/>
+                            <figcaption>
+                                <h2>Version 1.3</h2>
+                                <p>
+                                   * More backup intervals<br/>
+                                   * Better support for tablets
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </li> 
+                    <li class="small-3 columns">
+                        <figure>
+                            <img src="img/changelog/v2.png"/>
+                            <figcaption>
+                                <h2>Version 2</h2>
+                                <p>* Smaller memory footprint<br/>
+                                * Selective File Support (SFS)<br/>
+                                * Better support for large files
+                                </p>
+                            </figcaption>
+                        </figure>
+                    </li>             
+                </ul>                
+            </section>
+            <br/>
+            <section id="upgrading" class="leftPadding">
+                <h2>Upgrading from v1 to v2</h2>
+                You will receive the update automatically by Google Play.
+                <h3>Things you need to do</h3>
+                <p>
+                As the core of the app improved and changed dramatically, we could not save all your preferences.<br/>
+                You will need to <strong>reselect the folders and/or files you want to backup</strong>.<br/>
+                The backup interval and other settings are saved and reconfigured for you during the update process.
+                </p>
             </section>
         </div>
     </div>
