--- a/embedded/products.html
+++ b/embedded/products.html
@@ -5,38 +5,19 @@
 	<meta charset="utf-8">
 	
   	<title>Setarit</title>
-  	<meta name="description" content="Setarit landing page">
+  	<meta name="description" content="Embedded products page">
   	<meta name="author" content="Setarit">
-
-  	<link rel="stylesheet" href="../css/foundation.css">
-  	<link rel="stylesheet" type="text/css" href="../css/custom.css">
-  	<link rel="stylesheet" href="../css/jquery-ui.min.css">
-  	<link rel="shortcut icon" href="../img/square_flatLogoTest_noSlogan.png">
-  	<script src="../js/vendor/modernizr.js"></script>
-  	<script type="text/javascript" src="../js/ga.js"></script>
 </head>
 <body>
 	<!-- content -->
 	<div class="content" style="margin-top:2.5%">
-		<div class="row">
-            <div class="small-6 columns">
-                <a href="../backup.html"><img alt="backup-app" src="../img/backup_icon_64x64.jpg"/></a>
-            </div>
-            <div class="small-6 columns">
-                <a href="../bluetweak.html"><img style="max-height:64px" alt="BlueTweak-icon" src="../img/bluetweak_icon.png" /></a>
-            </div>
+		<div style="display:inline-block; margin:2.5%;">
+            <a href="../backup.html"><img alt="backup-app" src="../img/backup_icon_64x64.jpg"/></a>
+        </div>
+        <div class="small-6 columns" style="display:inline-block; margin:2.5%;">
+            <a href="../bluetweak.html"><img style="max-height:64px" alt="BlueTweak-icon" src="../img/bluetweak_icon.png" /></a>
         </div>
 	</div>	
 	<!-- END content -->	
-	<!-- Scripts -->
-	<script src="js/vendor/jquery.js"></script>
-	<script src="js/vendor/jquery-ui.min.js"></script>
-	<script src="js/vendor/fastclick.js"></script>
-	<script src="js/foundation.min.js"></script>
-
-	<script type="text/javascript" src="js/heroAnimation.js"></script>
-    <script type="text/javascript">
-        $(document).foundation();
-    </script>
 </body>
 </html>
