--- a/bluetweak.html
+++ b/bluetweak.html
@@ -69,7 +69,7 @@
                             <a href="#info">Features</a>
                         </li>
                         <li class="hoverColor">
-                            Documentation
+                            <a href="#docs">Documentation</a>
                         </li>
                     </ul>
                 </div>
@@ -105,7 +105,7 @@
 
             <section id="info">
                 <h2 style="text-align:center">Features</h2>
-                <h5 style="text-align:center" class="subheader">What BlueTweak can add to your day</h5>
+                <h5 style="text-align:center" class="subheader">The most important BlueTweak features</h5>
                 <div class="row">
                     <div class="small-4 columns" style="margin-top:-10%">
                         <img style="padding:40%" src="img/glyph_explorer.png" alt="Explorer"/>
@@ -121,7 +121,50 @@
                     </div>
                 </div>
             </section>
+            <hr/>
+            <section id="docs">
+                <h2 style="text-align:center">Documentation</h2>
+                <h5 style="text-align:center" class="subheader">All your questions will be answered below</h5>
+                <h3>Contents</h3>
+                <ul>
+                    <li><a href="#apps">Manage apps</a></li>
+                    <li><a href="#explorer">Explorer behaviour</a>
+                        <ul>
+                            <li><a href="sixfolders">Show user folders in 'This PC' window</a></li>
+                            <li><a href="onedrive">Show the OneDrive folder within the Explorer</a></li>
+                        </ul>                        
+                    </li>
+                </ul>
+                <h3 id="apps">Manage apps</h3>
+                <div class="row">
+                    <div class="small-6 medium-6 columns">
+                        <img src="img/bluetweak/apps_2.JPG" alt="Manage your apps" />  
+                    </div>
+                    <div class="small-6 medium-6 columns">
+                        <p>In this window your are able to select the apps you want to uninstall from your computer.</p>
+                        <p>Please note that these apps will not reinstall when you reboot or update.</p>
+                    </div>
+                </div>
+                <h3 id="explorer">Explorer behaviour</h3>
+                <div class="row">
+                    <div class="small-6 medium-6 columns">
+                        <img src="img/bluetweak/explorer.JPG" alt="Configure Explorer" /> 
+                    </div>
+                    <div class="small-6 medium-6 columns">
+                        <h4 id="#sixfolders">Show user folders in 'This PC' window</h4>
+                        <div class="row">
+                            <p class="small-4 columns">bla</p>
+                            <div class="small-6 columns">
+                                <img src="img/bluetweak/ex_folders_gone.JPG" alt="Folders invisible"/>
+                            </div>
+                        </div>
+                        
+                        
+                        <h4 id="#onedrive">Show the OneDrive folder within the Explorer</h4>
+                        </div>
+                </div>
 
+            </section>
         </div>
     </div>
     <!-- END content -->
