BlueTweak release + gitignore update

--- a/bluetweak.html
+++ b/bluetweak.html
@@ -83,7 +83,7 @@
                 <h2 style="text-align: center">Download BlueTweak</h2>
                 <div class="row">
                     <div class="small-4 columns">
-                        <a href="" class="button success"><h4 style="color:white">Download for Windows 10</h4></a>
+                        <a href="bin/bluetweak/setup.exe" class="button success"><h4 style="color:white">Download for Windows 10</h4></a>
                         <p>BlueTweak is only available for Windows 10</p>
                     </div>                    
                     <div class="slickShow small-6 columns" >
@@ -130,10 +130,12 @@
                     <li><a href="#apps">Manage apps</a></li>
                     <li><a href="#explorer">Explorer behaviour</a>
                         <ul>
-                            <li><a href="sixfolders">Show user folders in 'This PC' window</a></li>
-                            <li><a href="onedrive">Show the OneDrive folder within the Explorer</a></li>
+                            <li><a href="#sixfolders">Show user folders in 'This PC' window</a></li>
+                            <li><a href="#onedrive">Show the OneDrive folder within the Explorer</a></li>
                         </ul>                        
                     </li>
+                    <li><a href="#toolbox">Toolbox</a></li>
+                    <li><a href="#rate">Rate this software or suggest features</a></li>
                 </ul>
                 <h3 id="apps">Manage apps</h3>
                 <div class="row">
@@ -151,18 +153,35 @@
                         <img src="img/bluetweak/explorer.JPG" alt="Configure Explorer" /> 
                     </div>
                     <div class="small-6 medium-6 columns">
-                        <h4 id="#sixfolders">Show user folders in 'This PC' window</h4>
-                        <div class="row">
-                            <p class="small-4 columns">bla</p>
-                            <div class="small-6 columns">
-                                <img src="img/bluetweak/ex_folders_gone.JPG" alt="Folders invisible"/>
-                            </div>
-                        </div>
+                        <h4 id="sixfolders">Show user folders in 'This PC' window</h4>
+                        <p>When this checkbox is selected, the six user folders will be visible in the 'This PC' window.
+                        The six user folders are Desktop, Documents, Videos, Music, Pictures and Download.</p>
+                        <strong>Please not that the changes take place after you reopen the Explorer window</strong>
+                        <a href="img/bluetweak/ex_folders_gone.JPG" alt="Folders invisible">Click here to see an example without the six folders</a>
                         
                         
-                        <h4 id="#onedrive">Show the OneDrive folder within the Explorer</h4>
+                        <h4 id="onedrive">Show the OneDrive folder within the Explorer</h4>
+                        <p>This option does not uninstall OneDrive from your computer, it only removes the icon from the sidebar of your Explorer window.</p>
+                        <strong>Please not that the changes take place after you reopen the Explorer window</strong>
+                        <a href="img/bluetweak/ex_one_drive_sidebar.png">Click here to see where the OneDrive is located in the sidepanel</a>
                         </div>
                 </div>
+                <h3 id="toolbox">Toolbox</h3>
+                <div class="row">
+                    <div class="row">
+                        <div class="small-6 medium-6 columns">
+                            <img src="img/bluetweak/toolbox.JPG" alt="Toolbox" />
+                        </div>
+                        <div class="small-6 medium-6 columns">
+                            <p>The toolbox allows you to start a network monitor. You can see the downloaded and upload amount since the monitor started.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <h3 id="rate">Rate this software or suggest features</h3>
+                <p>We are always open to your feedback! If you have a feature request or you want to rate this product you can do it below:</p>
+                <a href="https://docs.google.com/forms/d/16NGk8eVYZjLLHeQ7O1SBzb37O0B6-w5LorqbemAqdHk/viewform">Rate BlueTweak</a><br />
+                <a href="https://docs.google.com/forms/d/1VDSkYFPYV-sx_LaAXUVVzrC4HKHnyoNJKwxCcgQRLY4/viewform">Submit a feature request</a>
 
             </section>
         </div>
