--- a/index.html
+++ b/index.html
@@ -73,10 +73,8 @@
 	                        </strong>                        	
                         </h5>
                         <br/>
-                        <a href="https://play.google.com/store/apps/details?id=com.setarit.backup">
-                            <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
-                        </a>
-
+                        <a href="https://play.google.com/store/apps/details?id=com.setarit.backup&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" />
+			</a>
                     </div>
                 </div>
 			</div>
