--- a/KB/knowledgebase.html
+++ b/KB/knowledgebase.html
@@ -38,14 +38,14 @@
   			<h4>Other</h4>
   			<p>Currently no articles, please come back later</p>
   		</div>
-	</div>	
+	</div>
 	<!-- END content -->
-	
+
 	<!-- Scripts -->
 	<script src="../js/vendor/jquery.js"></script>
 	<script src="../js/vendor/jquery-ui.min.js"></script>
 	<script src="../js/vendor/fastclick.js"></script>
-	<script src="../js/foundation.min.js"></script>
+	<script src="../js/foundation/foundation.min.js"></script>
 
 	<script type="text/javascript" src="../js/heroAnimation.js"></script>
 </body>
