--- a/index.html
+++ b/index.html
@@ -1,84 +1,86 @@
-﻿<!doctype html>
+<!doctype html>
 
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	
-  	<title>Setarit</title>
-  	<meta name="description" content="Setarit landing page">
-  	<meta name="author" content="Setarit">
 
-  	<link rel="stylesheet" href="css/foundation.css">
-  	<link rel="stylesheet" type="text/css" href="css/custom.css">
-  	<link rel="stylesheet" href="css/jquery-ui.min.css">
-  	<link rel="shortcut icon" href="img/square_flatLogoTest_noSlogan.png">
-  	<script src="js/vendor/modernizr.js"></script>
-  	<script type="text/javascript" src="js/ga.js"></script>
+	<title>Setarit</title>
+	<meta name="description" content="Setarit landing page">
+	<meta name="author" content="Setarit">
+
+	<link rel="stylesheet" href="css/foundation.css">
+	<link rel="stylesheet" type="text/css" href="css/custom.css">
+	<link rel="stylesheet" href="css/jquery-ui.min.css">
+	<link rel="shortcut icon" href="img/square_flatLogoTest_noSlogan.png">
+	<script src="js/vendor/modernizr.js"></script>
+	<script type="text/javascript" src="js/ga.js"></script>
 </head>
 <body>
-<!-- required for facebook-->
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=931874676860062";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<!-- end facebook -->
+	<!-- required for facebook-->
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=931874676860062";
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+	<!-- end facebook -->
 
 
 	<!-- nav bar -->
-	<div class="fixed">
-		<nav class="top-bar" data-topbar role="navigation">
-			<ul class="title-area">
-				<li class="name">
-					<h1><img src="img/rectangle_flatLogoTest_noSlogan.png" alt="Setarit Logo" /></h1>
-				</li>
+	<nav class="top-bar">
+		<div class="top-bar-title">
+			<span data-responsive-toggle="menu" data-hide-for="medium">
+    		<button type="button" data-toggle>
+					<span class="menu-icon light"></span>
+				</button>
+    	</span>
+			<a href="http://www.setarit.com">
+				<img src="img/rectangle_flatLogoTest_noSlogan.png" alt="Setarit Logo" />
+			</a>
+		</div>
+		<div class="top-bar-left" id="menu">
+			<ul class="dropdown menu" data-dropdown-menu>
+				<li class="active"><a href="#backup">BackUp</a></li>
+				<li><a href="#knowledgebase">Knowledge Base</a></li>
+				<li><a href="#contact">Contact</a></li>
 			</ul>
-
-			<section class="top-bar-section"><!-- actual navigation -->
-				<ul class="left">
-					<li class="active"><a href="#backup">BackUp</a></li>					
-					<li><a href="#knowledgebase">Knowledge Base</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>		    
-			</section>
-		</nav>
-	</div>
+		</div>
+	</nav>
 	<!-- END nav bar -->
 
 	<!-- content -->
 	<div class="content">
 		<!-- backup section -->
 		<section id="backup">
-			<div class="hero">				
-                <div class="row" id="heroContent">
-                    <div class="large-6 columns">
-                        <img src="img/backup_combine_v2.png" alt="screenshot of the backup application" />
-                    </div>
-                    <div class="large-6 columns">
-                        <h1>Version 2 now available for Android!</h1>
-                        <ul>
-                            <li><img src="img/Available_icon_white.png" alt="Feature tick" />Periodically creates a backup from your device</li>
-                            <li><img src="img/Available_icon_white.png" alt="Feature tick" />Multiple cloud providers available</li>
-                            <li><img src="img/Available_icon_white.png" alt="Feature tick" />Easy configuration</li>
-                            <li><img src="img/Available_icon_white.png" alt="Feature tick" />Support</li>
-                            <li><img src="img/Available_icon_white.png" alt="Feature tick" />Frequent updates</li>
-                            <li><img src="img/Available_icon_white.png" alt="Feature tick" />Selective File Support (SFS)</li>
-                        </ul>
-                        <h5 class="pull-right">
-	                        <strong>
-	                        	<a href="backup.html">More info...</a>
-	                        </strong>                        	
-                        </h5>
-                        <br/>
-                        <a href="https://play.google.com/store/apps/details?id=com.setarit.backup">
-                            <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
-                        </a>
+			<div class="hero">
+				<div class="row" id="heroContent">
+					<div class="large-6 columns">
+						<img src="img/backup_combine_v2.png" alt="screenshot of the backup application" />
+					</div>
+					<div class="large-6 columns">
+						<h1>Version 2 now available for Android!</h1>
+						<ul>
+							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Periodically creates a backup from your device</li>
+							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Multiple cloud providers available</li>
+							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Easy configuration</li>
+							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Support</li>
+							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Frequent updates</li>
+							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Selective File Support (SFS)</li>
+						</ul>
+						<h5 class="pull-right">
+							<strong>
+								<a href="backup.html">More info...</a>
+							</strong>
+						</h5>
+						<br/>
+						<a href="https://play.google.com/store/apps/details?id=com.setarit.backup">
+							<img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+						</a>
 
-                    </div>
-                </div>
+					</div>
+				</div>
 			</div>
 		</section>
 		<!-- END backup section -->
@@ -87,8 +89,8 @@
 			<section id="knowledgebase">
 				<a href="KB/knowledgebase.html">
 					<img src="img/kb.png" alt="Visit our Knowledge Base"/>
-				</a>	
-			</section>		
+				</a>
+			</section>
 			<!-- END KB section -->
 			<!-- contact section -->
 			<section id="contact">
@@ -104,29 +106,29 @@
 							<a href="https://github.com/Setarit">
 								<img src="img/GitHub-Mark.png"/>
 								On GitHub
-							</a>							
-						</div>							
+							</a>
+						</div>
 						<div class="small-4 columns">
-								<div class="fb-like" data-href="http://www.facebook.com/setarit" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+							<div class="fb-like" data-href="http://www.facebook.com/setarit" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
 						</div>
 					</div>
 
-					
+
 				</div>
 			</section>
 			<!-- END contact section -->
 		</div>
-	</div>	
-	<!-- END content -->	
+	</div>
+	<!-- END content -->
 	<!-- Scripts -->
 	<script src="js/vendor/jquery.js"></script>
 	<script src="js/vendor/jquery-ui.min.js"></script>
 	<script src="js/vendor/fastclick.js"></script>
-	<script src="js/foundation.min.js"></script>
+	<script src="js/vendor/foundation.min.js"></script>
 
 	<script type="text/javascript" src="js/heroAnimation.js"></script>
-    <script type="text/javascript">
-        $(document).foundation();
-    </script>
+	<script type="text/javascript">
+	$(document).foundation();
+	</script>
 </body>
 </html>
