--- a/KB/knowledgebase.html
+++ b/KB/knowledgebase.html
@@ -36,7 +36,13 @@
 		</div>
   		<div class="large-6 columns panel">
   			<h4>Other</h4>
-  			<p>Currently no articles, please come back later</p>
+				<ul>
+					<li>
+						<a href="QuietTicket/QuietTicket-Manager-NL.pdf">
+							<strong>KB-QTI</strong> QuietTicket-Manager-NL.pdf - NL
+						</a>
+					</li>
+				</ul>
   		</div>
 	</div>
 	<!-- END content -->
