Update QT manual

--- a/KB/knowledgebase.html
+++ b/KB/knowledgebase.html
@@ -39,7 +39,7 @@
 				<ul>
 					<li>
 						<a href="QuietTicket/QuietTicket-Manager-NL.pdf">
-							<strong>KB-QTI</strong> QuietTicket-Manager-NL.pdf - NL
+							<strong>KB-QTI-001</strong> QuietTicket-Manager-NL.pdf - NL (20/09/2016)
 						</a>
 					</li>
 				</ul>
