--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 		<div class="top-bar-left" id="menu">
 			<ul class="dropdown menu" data-dropdown-menu>
 				<li class="active"><a href="#backup">BackUp</a></li>
+				<li><a href="#customers">Customers</a></li>
 				<li><a href="#knowledgebase">Knowledge Base</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
@@ -83,6 +84,20 @@
 				</div>
 		</section>
 		<!-- END backup section -->
+		<!-- Customers section -->
+		<section style="padding-top: 15px; padding-bottom: 15px;" id="customers">
+			<div class="row">
+				<h2>Customers</h2>
+				<div class="row small-up-1 medium-up-2 large-up-4">
+					<div class="column">
+						<a href="http://www.sportassion.be"><img src="img/customers/pajottenland_mtb_school.png" /></a>
+					</div>
+					<div class="column">
+						<a href="http://www.sportassion.be"><img src="img/customers/sportassion.png" /></a>
+					</div>
+				</div>
+			</div>
+		</section>
 		<div class="row">
 			<!-- KB section -->
 			<section id="knowledgebase">
