--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 	<meta charset="utf-8">
 
 	<title>Setarit</title>
-	<meta name="description" content="Setarit landing page">
+	<meta name="description" content="Setarit landing page. Setarit is a young Belgian IT company that focuses on software built for people's needs. We listen carefully to your suggestions and make them reality!">
 	<meta name="author" content="Setarit">
+	<!-- Chrome, Firefox OS and Opera -->
+	<meta name="theme-color" content="#1e2247">
+	<!-- Windows Phone -->
+	<meta name="msapplication-navbutton-color" content="#1e2247">
 
 	<link rel="stylesheet" href="css/foundation.css">
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
