--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Setarit</title>
 	<meta name="description" content="Setarit landing page. Setarit is a young Belgian IT company that focuses on software built for people's needs. We listen carefully to your suggestions and make them reality!">
@@ -12,11 +14,10 @@
 	<!-- Windows Phone -->
 	<meta name="msapplication-navbutton-color" content="#1e2247">
 
-	<link rel="stylesheet" href="css/foundation.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 	<link rel="stylesheet" href="css/jquery-ui.min.css">
 	<link rel="shortcut icon" href="img/square_flatLogoTest_noSlogan.png">
-	<script src="js/vendor/modernizr.js"></script>
 	<script type="text/javascript" src="js/ga.js"></script>
 </head>
 <body>
@@ -33,120 +34,127 @@
 
 
 	<!-- nav bar -->
-	<nav class="top-bar">
-		<div class="top-bar-title">
-			<span data-responsive-toggle="menu" data-hide-for="medium">
-    		<button type="button" data-toggle>
-					<span class="menu-icon light"></span>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
 				</button>
-    	</span>
-			<a href="http://www.setarit.com">
-				<img src="img/rectangle_flatLogoTest_noSlogan.png" alt="Setarit Logo" />
-			</a>
-		</div>
-		<div class="top-bar-left" id="menu">
-			<ul class="dropdown menu" data-dropdown-menu>
-				<li class="active"><a href="#backup">BackUp</a></li>
-				<li><a href="#customers">Customers</a></li>
-				<li><a href="#knowledgebase">Knowledge Base</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</div>
+				<a class="navbar-brand" href="http://www.setarit.com"><img alt="Setarit" src="img/rectangle_flatLogoTest_noSlogan.png" ></a>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div><!--/.nav-collapse -->
+		</div><!--/.container-fluid -->
 	</nav>
 	<!-- END nav bar -->
 
 	<!-- content -->
-	<div class="content">
-		<!-- backup section -->
-		<section id="backup">
-			<div class="hero">
-				<div class="row" id="heroContent">
-					<div class="large-6 columns">
-						<img src="img/backup_combine_v2.png" alt="screenshot of the backup application" />
-					</div>
-					<div class="large-6 columns">
-						<h1>Version 2 now available for Android!</h1>
-						<ul>
-							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Periodically creates a backup from your device</li>
-							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Multiple cloud providers available</li>
-							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Easy configuration</li>
-							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Support</li>
-							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Frequent updates</li>
-							<li><img src="img/Available_icon_white.png" alt="Feature tick" />Selective File Support (SFS)</li>
-						</ul>
-						<h5 class="pull-right">
-							<strong>
-								<a href="backup.html">More info...</a>
-							</strong>
-						</h5>
-						<br/>
-						<a href="https://play.google.com/store/apps/details?id=com.setarit.backup">
-							<img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
-						</a>
-
-					</div>
-				</div>
-		</section>
-		<!-- END backup section -->
-		<!-- Customers section -->
-		<section style="padding-top: 15px; padding-bottom: 15px;" id="customers">
-			<div class="row">
-				<h2>Customers</h2>
-				<div class="row small-up-1 medium-up-2 large-up-4">
-					<div class="column">
-						<a href="http://www.sportassion.be"><img src="img/customers/pajottenland_mtb_school.png" /></a>
-					</div>
-					<div class="column">
-						<a href="http://www.sportassion.be"><img src="img/customers/sportassion.png" /></a>
-					</div>
-				</div>
+	<!-- welcome -->
+	<div class="welcome-full-window">
+		<div class="center-parent">
+			<div class="center-child">
+				<p>Taylor made budget friendly IT solutions</p>
 			</div>
-		</section>
-		<div class="row">
-			<!-- KB section -->
-			<section id="knowledgebase">
-				<a href="KB/knowledgebase.html">
-					<img src="img/kb.png" alt="Visit our Knowledge Base"/>
-				</a>
+			<section id="scrollButton" class="scrollButton">
+				<a href="#products"><span></span>Scroll</a>
 			</section>
-			<!-- END KB section -->
-			<!-- contact section -->
-			<section id="contact">
-				<div class="medium-6 large-8 columns">
-					<h4>Contact</h4>
-					<p>You can contact us in various ways:</p>
-					<div class="row">
-						<div class="small-4 columns">
-							<a href="https://twitter.com/intent/tweet?screen_name=Setarit" class="twitter-mention-button" data-size="large" data-dnt="true">Tweet to @Setarit</a>
-							<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-						</div>
-						<div id="GitHub" class="small-4 columns">
-							<a href="https://github.com/Setarit">
-								<img src="img/GitHub-Mark.png"/>
-								On GitHub
-							</a>
-						</div>
-						<div class="small-4 columns">
-							<div class="fb-like" data-href="http://www.facebook.com/setarit" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-						</div>
-					</div>
-
-
-				</div>
-			</section>
-			<!-- END contact section -->
 		</div>
 	</div>
-	<!-- END content -->
-	<!-- Scripts -->
-	<script src="js/vendor/jquery.js"></script>
-	<script src="js/vendor/jquery-ui.min.js"></script>
-	<script src="js/vendor/fastclick.js"></script>
-	<script src="js/vendor/foundation.min.js"></script>
+	<!-- welcome -->
 
-	<script type="text/javascript" src="js/heroAnimation.js"></script>
-	<script type="text/javascript">
-	$(document).foundation();
-	</script>
-</body>
-</html>
+
+
+
+	<div class="container">
+		<!-- backup section -->
+		<section class="cardbox" id="products">
+				<h2 class="text-center">Products</h2>
+				<div class="row">
+					<div class="col-md-2 col-xs-4">
+						<a href="backup.html">
+							<img src="img/backup_combine_v2.png" class="img-responsive" alt="screenshot of the backup application" />
+						</a>
+						<a class="text-center" href="https://play.google.com/store/apps/details?id=com.setarit.backup">
+							<img class="img-responsive" alt="Get it on Google Play" src="img/google-play-badge.png" />
+						</a>
+					</div>
+
+					<div class="col-md-2 col-xs-4">
+						<a class="text-center" href="https://quietticket.com">
+							<img class="img-responsive" alt="QuietTicket" src="img/quietticket.png" />
+						</a>
+						<p class="text-center">Straightforward, flexible and budget friendly online ticket selling</p>
+					</div>
+				</div>
+			</section>
+			<!-- END backup section -->
+			<br />
+			<!-- Customers section -->
+			<section class="cardbox" id="customers">
+				<div class="row">
+					<h2 class="text-center">Customers</h2>
+					<div class="row small-up-1 medium-up-2 large-up-4">
+						<div class="col-md-2 col-xs-4">
+							<a href="http://www.sportassion.be"><img class="img-responsive" src="img/customers/pajottenland_mtb_school.png" /></a>
+						</div>
+						<div class="col-md-2 col-xs-4">
+							<a href="http://www.sportassion.be"><img class="img-responsive" src="img/customers/sportassion.png" /></a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<br />
+				<!-- KB section -->
+				<section class="cardbox" id="knowledgebase" style="padding: 0px">
+					<a href="KB/knowledgebase.html">
+						<img src="img/kb.png" alt="Visit our Knowledge Base"/>
+					</a>
+				</section>
+				<!-- END KB section -->
+				<br />
+				<!-- contact section -->
+				<section class="cardbox" id="contact">
+						<h2 class="text-center">Contact</h2>
+						<p>You can contact us in various ways:</p>
+						<div class="row">
+							<div class="col-md-4">
+								<a href="https://twitter.com/intent/tweet?screen_name=Setarit" class="twitter-mention-button" data-size="large" data-dnt="true">Tweet to @Setarit</a>
+								<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+							</div>
+							<div id="GitHub" class="col-md-4">
+								<a href="https://github.com/Setarit">
+									<img src="img/GitHub-Mark.png"/>
+									On GitHub
+								</a>
+							</div>
+							<div class="col-md-4">
+								<div class="fb-like" data-href="http://www.facebook.com/setarit" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+							</div>
+						</div>
+				</section>
+				<!-- END contact section -->
+				<footer class="text-center">Copyright &#169; Setarit
+					<script type="text/javascript">
+						var d = new Date();
+						document.write(d.getFullYear());
+					</script>
+					- Google Play and the Google Play logo are trademarks of Google Inc.</footer>
+			</div>
+		</div>
+		<!-- END content -->
+		<!-- Scripts -->
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/index.js"></script>
+	</body>
+	</html>
