KB and backup page rebranded

--- a/KB/knowledgebase.html
+++ b/KB/knowledgebase.html
@@ -8,7 +8,7 @@
   	<meta name="description" content="Setarit Knowledge base">
   	<meta name="author" content="Setarit">
 
-  	<link rel="stylesheet" href="../css/foundation.css">
+  	<link rel="stylesheet" href="../css/bootstrap.min.css">
   	<link rel="stylesheet" type="text/css" href="../css/custom.css">
   	<link rel="stylesheet" href="../css/jquery-ui.min.css">
   	<link rel="shortcut icon" href="../img/square_flatLogoTest_noSlogan.png">
@@ -24,7 +24,7 @@
 
 	<!-- content -->
 	<div class="row kbList">
-		<div class="large-6 columns panel">
+		<div class="col-lg-6 panel">
 			<h4>For developers</h4>
 			<ul>
 				<li>
@@ -34,7 +34,7 @@
 				</li>
 			</ul>
 		</div>
-  		<div class="large-6 columns panel">
+  		<div class="col-lg-6 columns panel">
   			<h4>Other</h4>
 				<ul>
 					<li>
