--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="http://www.setarit.com"><img alt="Setarit" src="img/rectangle_flatLogoTest_noSlogan.png" ></a>
+				<a class="navbar-brand" href="index.html"><img alt="Setarit" src="img/rectangle_flatLogoTest_noSlogan.png" ></a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Contact</a></li>
+					<li class="active"><a href="index.html">Home</a></li>
+					<li class=""><a href="KB/knowledgebase.html">Knowledge Base</a></li>
+          <li class=""><a href="backup.html">Backup</a></li>
+          <li class=""><a href="https://quietticket.com">QuietTicket</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div><!--/.container-fluid -->
