--- a/KB/knowledgebase.html
+++ b/KB/knowledgebase.html
@@ -45,6 +45,11 @@
 				</ul>
   		</div>
 	</div>
+	<footer class="text-center">Copyright &#169; Setarit
+		<script type="text/javascript">
+			var d = new Date();
+			document.write(d.getFullYear());
+		</script></footer>
 	<!-- END content -->
 
 	<!-- Scripts -->
