--- a/backup.html
+++ b/backup.html
@@ -104,6 +104,13 @@
                 The backup interval and other settings are saved and reconfigured for you during the update process.
                 </p>
             </section>
+
+            <footer class="text-center">Copyright &#169; Setarit
+    					<script type="text/javascript">
+    						var d = new Date();
+    						document.write(d.getFullYear());
+    					</script>
+    					- Google Play and the Google Play logo are trademarks of Google Inc.</footer>
     </div>
     <!-- END content -->
     <!-- Scripts -->
