Add customers + products

--- a/index.html
+++ b/index.html
@@ -92,7 +92,14 @@
 						<a class="text-center" href="https://quietticket.com">
 							<img class="img-responsive" alt="QuietTicket" src="img/quietticket.png" />
 						</a>
-						<p class="text-center">Straightforward, flexible and budget friendly online ticket selling</p>
+						<p class="text-center hidden-xs">Straightforward, flexible and budget friendly online ticket selling</p>
+					</div>
+
+					<div class="col-md-2 col-xs-4">
+						<a class="text-center" href="http://parcks.setarit.com">
+							<img class="img-responsive" alt="Parcks" src="img/parcks.png" />
+						</a>
+						<p class="text-center hidden-xs">A Standardized Packages Installer for GNU/Linux</p>
 					</div>
 				</div>
 			</section>
@@ -108,6 +115,9 @@
 						</div>
 						<div class="col-md-2 col-xs-4">
 							<a href="http://www.sportassion.be"><img class="img-responsive" src="img/customers/sportassion.png" /></a>
+						</div>
+						<div class="col-md-2 col-xs-4">
+							<a href="http://www.devrijebelgen.be"><img class="img-responsive" src="img/customers/dvb.png" /></a>
 						</div>
 					</div>
 				</div>
