--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 						<div class="col-md-2 col-xs-4">
 							<a href="http://www.devrijebelgen.be"><img class="img-responsive" src="img/customers/dvb.png" /></a>
 						</div>
+						<div class="col-md-2 col-xs-4">
+							<a href="http://www.vub.ac.be/vuborkest/php/index.php"><img class="img-responsive" src="img/customers/vuborkest.png" /></a>
+						</div>
 					</div>
 				</div>
 			</section>
