Settler landing page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 	<!-- nav bar -->
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -47,10 +47,10 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">Home</a></li>
 					<li class=""><a href="KB/knowledgebase.html">Knowledge Base</a></li>
           <li class=""><a href="backup.html">Backup</a></li>
           <li class=""><a href="https://quietticket.com">QuietTicket</a></li>
+					<li class=""><a href="settler.html">Settler</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div><!--/.container-fluid -->
