--- a/backup.html
+++ b/backup.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <!-- nav bar -->
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -40,6 +40,7 @@
           <li class=""><a href="KB/knowledgebase.html">Knowledge Base</a></li>
           <li class="active"><a href="backup.html">Backup</a></li>
           <li class=""><a href="https://quietticket.com">QuietTicket</a></li>
+          <li class=""><a href="settler.html">Settler</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
